@@ -1,4 +1,5 @@
 0.09
+ - Update .travis.yml to reality.
 
 0.08 2015-09-18T14:49:39+02:00
  - Add support for min (minute) and h (hour) duration.
